--- a/entrypoints/popup/style.css
+++ b/entrypoints/popup/style.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
   font-family: "montserrat";
   src: url("./assets/fonts/montserrat/Montserrat-VariableFont_wght.ttf") format("truetype");
   font-weight: 300 900;
@@ -16,10 +16,10 @@
   font-weight: 300 900;
   font-style: italic;
   font-display: swap;
-}
+} */
 
 body {
-  font-family: "montserrat", sans-serif;
+  /* font-family: "montserrat", sans-serif; */
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
